[package]
name = "giftbox"
version = "0.1.1"
edition = "2018"
description = "A fun Rust crate called `giftbox` to help Rustlings learn and explore generics."
readme = "README.md"
repository = "https://github.com/hypnoseal/giftbox"
license = "MIT"
keywords = ["gift", "box", "beginner", "instructional", "tutorial"]
categories = ["data-structures"]

[dependencies]
